# rubot

./: Cargo.toml  LICENSE  config.toml
src/: agent.rs  error.rs  main.rs  metric.rs
src/config/: input.rs  mod.rs  output.rs
src/internal/: mod.rs
src/model/: mod.rs
src/plugins/: mod.rs
src/plugins/inputs/: mod.rs
src/plugins/parsers/: csv.rs  influx.rs  json.rs  mod.rs
src/plugins/serializers/: mod.rs
