[package]
name = "rubot"
version = "0.1.0"
authors = ["Pengfei Tian <itsneo1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde-humanize-rs = "0.1"
toml = "0.5"
chrono = "0.4.10"
